Fixed next section button and button overflowing

--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,11 @@ body {
     rgba(148, 201, 233, 1) 100%
   );
 }
+
+body.no-scroll {
+  overflow: hidden;
+}
+
 .header-text{
   font-family: "Lora", serif;
   font-weight: 900;
@@ -41,9 +46,10 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  height: 60vh;
   width: 100%;
   color: #fff;
+  padding-bottom: 9rem;
 }
 
 .about-container {
